@@ -5,7 +5,6 @@ import com.cibertec.proyecto.dtos.SocioResponseDTO;
 import com.cibertec.proyecto.entities.Socio;
 import com.cibertec.proyecto.exceptions.ConflictException;
 import com.cibertec.proyecto.exceptions.ResourceNotFoundException;
-import com.cibertec.proyecto.mappers.SocioMapper;
 import com.cibertec.proyecto.repositories.SocioRepository;
 import com.cibertec.proyecto.services.ISocioService;
 import lombok.RequiredArgsConstructor;
@@ -15,32 +14,28 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SocioServiceImpl implements ISocioService {
 
     private final SocioRepository socioRepository;
-    private final SocioMapper socioMapper;
 
     @Override
     @Transactional
     public SocioResponseDTO crearSocio(SocioDTO dto) {
-        if (socioRepository.existsByDni(dto.dni())) {
-            throw new ConflictException("Ya existe un socio con el DNI: " + dto.dni());
+        if (socioRepository.existsByDni(dto.getDni())) {
+            throw new ConflictException("Ya existe un socio con el DNI: " + dto.getDni());
         }
-
-        Socio socio = socioMapper.toEntity(dto);
-        Socio savedSocio = socioRepository.save(socio);
-        return socioMapper.toResponseDTO(savedSocio);
-    }
-
-    @Override
-    @Transactional
-    public void eliminarSocioPorDni(String dni) {
-        Socio socio = socioRepository.findByDni(dni)
-                .orElseThrow(() -> new ResourceNotFoundException("No existe un socio con el DNI: " + dni));
-        socioRepository.delete(socio);
+        Socio socio = Socio.builder()
+                .nombre(dto.getNombre().trim())
+                .apellido(dto.getApellido().trim())
+                .dni(dto.getDni().trim())
+                .telefono(dto.getTelefono())
+                .email(dto.getEmail())
+                .build();
+        return toDTO(socioRepository.save(socio));
     }
 
     @Override
@@ -48,49 +43,58 @@ public class SocioServiceImpl implements ISocioService {
     public SocioResponseDTO actualizarSocio(String dni, SocioDTO dto) {
         Socio socio = socioRepository.findByDni(dni)
                 .orElseThrow(() -> new ResourceNotFoundException("Socio no encontrado con DNI: " + dni));
+        socio.setNombre(dto.getNombre().trim());
+        socio.setApellido(dto.getApellido().trim());
+        socio.setDni(dto.getDni().trim());
+        socio.setTelefono(dto.getTelefono());
+        socio.setEmail(dto.getEmail());
+        return toDTO(socioRepository.save(socio));
+    }
 
-        if (!socio.getDni().equals(dto.dni()) && socioRepository.existsByDni(dto.dni())) {
-            throw new ConflictException("El DNI " + dto.dni() + " ya esta en uso por otro socio");
+    @Override
+    @Transactional
+    public void eliminarSocioPorDni(String dni) {
+        if (!socioRepository.existsByDni(dni)) {
+            throw new ResourceNotFoundException("Socio no encontrado con DNI: " + dni);
         }
-
-        socio.setNombre(dto.nombre());
-        socio.setApellido(dto.apellido());
-        socio.setDni(dto.dni());
-        socio.setTelefono(dto.telefono());
-        socio.setEmail(dto.email());
-
-        Socio updatedSocio = socioRepository.save(socio);
-        return socioMapper.toResponseDTO(updatedSocio);
+        socioRepository.deleteByDni(dni);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<SocioResponseDTO> listarSocios() {
-        return socioRepository.findAll()
-                .stream()
-                .map(socioMapper::toResponseDTO)
-                .toList();
+        return socioRepository.findAll().stream()
+                .map(this::toDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional(readOnly = true)
     public Page<SocioResponseDTO> listarSociosPaginado(Pageable pageable) {
-        return socioRepository.findAll(pageable)
-                .map(socioMapper::toResponseDTO);
+        return socioRepository.findAll(pageable).map(this::toDTO);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public Page<SocioResponseDTO> buscarSocios(String term, Pageable pageable) {
-        return socioRepository.findByNombreContainingIgnoreCaseOrDniContaining(term, term, pageable)
-                .map(socioMapper::toResponseDTO);
+        return socioRepository
+                .findByNombreContainingIgnoreCaseOrDniContaining(term, term, pageable)
+                .map(this::toDTO);
     }
 
     @Override
-    @Transactional(readOnly = true)
     public SocioResponseDTO obtenerPorDni(String dni) {
-        return socioRepository.findByDni(dni)
-                .map(socioMapper::toResponseDTO)
+        Socio socio = socioRepository.findByDni(dni)
                 .orElseThrow(() -> new ResourceNotFoundException("Socio no encontrado con DNI: " + dni));
+        return toDTO(socio);
+    }
+
+    // ── Mapper privado ─────────────────────────────────────
+    private SocioResponseDTO toDTO(Socio s) {
+        return SocioResponseDTO.builder()
+                .id(s.getId())
+                .nombre(s.getNombre())
+                .apellido(s.getApellido())
+                .dni(s.getDni())
+                .telefono(s.getTelefono())
+                .email(s.getEmail())
+                .build();
     }
 }
